Add per-league source weights
